--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - db_volume:/var/lib/postgresql/data/
     env_file:
       - ./.env
+    ports:
+      - "5432:5432"
 
   wcollector:
     image: alexanderpai/wcollector:latest
@@ -14,3 +16,6 @@ services:
       - db
     env_file:
       - ./.env
+
+volumes:
+  db_volume:
